fix: reset + canvas invisible

--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -17,6 +17,7 @@
   margin: auto;
   width: min-content;
   border: 0px;
+  border-radius: 15px;
 }
 
 .grid {
